--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <!-- Adding Tailwind Elements Script CDN -->
-  <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js"></script>
+  <!-- <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js"></script> -->
 </body>
 
 </html>
